# SSOEngine

./: .gitignore  CREDITS.md  HowToUseTools.md  INSTALL (MUST READ).txt  LICENSE  README.md
01_Core/: CMakeLists.txt  build.bat  config.txt  game.h  main.cpp  resource.rc
01_Core/android/: AndroidManifest.xml  main_android.cpp
01_Core/android/res/values/: strings.xml
01_Core/android/src/com/ssogames/ssoengine/: MainActivity.java  R.java
01_Core/game/: main.cpp  sso_editor.cpp  sso_editor.h  sso_project_manager.cpp  sso_project_manager.h  sso_renderer.cpp  sso_renderer.h
01_Core/tools/: sso_3d.h  sso_audio.h  sso_camera.h  sso_container.h  sso_ext.h  sso_file.h  sso_file_android.cpp  sso_file_win32.cpp  sso_logger.h  sso_math.h  sso_memo.h  sso_ph3d.h  sso_physics.h  sso_provider.h  sso_splash.h  sso_text.h  sso_timer.h  sso_ui.h  sso_window.h
02_Docs/Legal/: EULA.txt
03_Example/Catch/: catch.cpp
03_Example/Physics/: phy.cpp
03_Example/Race/: race.cpp
Web/Website/: README.md  all.html  docs.html  downloading.html  index.html  license.html  privacy.html  script.js  styles.css  terms.html
